<resources>
    <string name="app_name">Android SNS Project</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="date">0000–00–00</string>
    <string name="e_mail">E-mail</string>
    <string name="address">abc@domain.com</string>
    <string name="password">Password</string>

    <string name="go_sign_up">GO TO SIGN UP</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="log_out">LOG OUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>